# DiscordRPBot

./: .env.example  .gitignore  ANALYSE_COMMANDES_GAP.md  BOT_MONITOR_GUIDE.md  CHANGELOG.md  CHANGELOG_SIMPLE.md  DEPLOYMENT_CHECKLIST.txt  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_FINAL_GUIDE.md  DEPLOYMENT_SIMPLE_FINAL.md  DEPLOY_RENDER_QUICK_GUIDE.md  DISCORD_PY_DOWNGRADE_SOLUTION.md  EXECUTIVE_SUMMARY_SECURITY.md  EXPLOIT_DIAGNOSIS.md  FINAL_SUMMARY.md  FIX_REAL_AUDIOOP.md  GUIDE_DEPLOYMENT_ALTERNATIVES.md  GUIDE_DEPLOYMENT_PRODUCTION.md  IMPLEMENTATION_PERMISSIONS_GUIDE.md  MILESTONE_7_7_TESTS.md  NEXTCORD_FINAL_SOLUTION.md  OLD_MONKEY_PATCH_AUDIOOP_SOLUTION.md  OLD_RENDER_AUDIOOP_FIX.md  OLD_RENDER_DEPLOYMENT_FIXES.md  OLD_RENDER_DEPLOYMENT_SUMMARY.txt  OLD_RENDER_FREE_COMPATIBILITY_CONFIRMED.md  OLD_VICTOIRE_AUDIOOP_PATCH.md  QUICK_REFERENCE.txt  QUICK_START.md  RAILWAY_UPTIMEROBOT_SETUP.md  RAPPORT_FINAL_TECH_BRIEF.md  RAPPORT_MISSION_INTERNATIONALISATION.md  RAPPORT_MODIFICATIONS_ETAPE1.md  README.md  RENDER_DEPLOYMENT_GUIDE.md  RENDER_FREE_OPTIMIZATION.md  SECURITY_AUDIT_PERMISSIONS.md  SECURITY_AUDIT_SUPABASE.md  SESSION_SUMMARY.md  SNAPSHOTS.md  (+77 more)
